--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-    font-family: 'Lato', sans-serif;
+* {
+  font-family: "Lato", sans-serif;
 }
 
-.container{
-    width: 100%;
-    /* max-width: 1300px; */
-    padding: 0 2%;
-    margin: 0 auto;
+.container {
+  width: 100%;
+  /* max-width: 1300px; */
+  padding: 0 2%;
+  margin: 0 auto;
+}
+
+.back-image {
+  position: relative;
+}
+
+.back-image img {
+  position: relative;
+  z-index: 2;
+}
+
+.back-image::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgb(214, 144, 22);
+  background: linear-gradient(
+    180deg,
+    rgba(214, 144, 22, 1) 0%,
+    rgba(235, 90, 50, 1) 95%
+  );
+  position: absolute;
+  top: 25px;
+  left: -25px;
+  z-index: 1;
+  border-radius: 50px;
 }
