--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
 
 .container {
   width: 100%;
-  /* max-width: 1300px; */
-  padding: 0 2%;
+  padding-left: 2%;
+  padding-right: 2%;
   margin: 0 auto;
 }
 
@@ -28,11 +28,11 @@
   content: "";
   width: 100%;
   height: 100%;
-  background: rgb(214, 144, 22);
+  background: rgb(223, 184, 24);
   background: linear-gradient(
     180deg,
-    rgba(214, 144, 22, 1) 0%,
-    rgba(235, 90, 50, 1) 95%
+    rgba(223, 184, 24, 1) 0%,
+    rgba(177, 128, 41, 1) 95%
   );
   position: absolute;
   top: 25px;
@@ -41,13 +41,22 @@
   border-radius: 50px;
 }
 
-.custom-rounded{
+.custom-rounded {
   border-radius: 20% 0 20% 0;
 }
 
-.menu-mobile{
+.menu-mobile {
   width: 100%;
   max-width: 30vh;
   min-width: 300px;
   height: 100%;
+}
+
+.bg-golden {
+  background: rgb(223, 184, 24);
+  background: linear-gradient(
+    180deg,
+    rgba(223, 184, 24, 1) 0%,
+    rgba(177, 128, 41, 1) 95%
+  );
 }
