feat: página de produtos, grade e aside.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,3 +60,8 @@
     rgba(177, 128, 41, 1) 95%
   );
 }
+
+.stone-fade-name{
+  background: rgb(255,255,255);
+background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.8575805322128851) 57%);
+}
