feat: filtro para projetos.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,7 @@
 
 .filter-products div:nth-of-type(2n){
   background-color: white;
-  color: rgb(234 88 12);;
+  color: rgb(234 88 12);
 }
 
 .banner-projects{
