--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0) 0%,
-    rgba(0, 0, 0, 0.8575805322128851) 57%
+    rgba(0, 0, 0, 0.6) 57%
   );
 }
 
