feat: criação de página de contato e adição de ícone.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,9 @@
 .banner-opacity{
   background-color: rgba(9, 9, 11, 0.63);
 }
+
+.bg-image-contact-page{
+  background-image: url("https://images.unsplash.com/photo-1590227344930-9e75284f8de9?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: right;
+}
